--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ setTimeout(removeBadge, 1000);
         <div class="_3d-container">
           <div class="startups-header-component">
             <div class="startups-header-content">
-              <h1 class="h1-48px-opensauce">
+              <h1 class="h1-48px-opensauce color_blue">
                 A High-impact SaaS PPC Agency to
                 <span class="color_red"
                   >Exceed SQL &amp; ROI Targets</span
@@ -1407,7 +1407,7 @@ setTimeout(removeBadge, 1000);
         background-color: #FF2A00;
         color: white;
       }
-      .h1-48px-opensauce{
+      .color_blue{
         color: #132D7D;
       }
     </style>
